# docster

./: .flake8  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  11.dd228840.js  17896441.0b108604.js  17896441.cfbf89a3.js  2.f9e3a20f.js  3b8c55ea.90f0d829.js  404.html  81a6f1a5.92d47807.js  81a6f1a5.93017439.js  9.3859f647.js  935f2afb.9722f146.js  935f2afb.f903f279.js  README.md  af29d445.6eb11cce.js  af29d445.b5a56f43.js  af29d445.fc969acb.js  c377a04b.1e3bbe32.js  c377a04b.fa0f6f82.js  common.1ef25214.js  common.4213609c.js  index.html  main.b8f67900.js  main.e46a0792.js  main.fbea9977.js  pyproject.toml  runtime~main.0878bd60.js  runtime~main.2ddf36f7.js  runtime~main.bd21bd5d.js  sitemap.xml  styles.cbac6a88.css  template.md
.github/: test.yml
.github/workflows/: documentation.yml  release.yml  test.yml
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  sidebars.ts  tsconfig.json
docs/docs/: docster.md  index.md  templating.md
docs/src/css/: custom.css
docster/: helpers.py  index.html  main.py  models.py  visitor.py
installation/: index.html
templating/: index.html
tests/: test_end_to_end.py  test_parsing.py
tests/data/: signature.py
