[tool.poetry]
name = "docster"
version = "0.1.0"
description = "Automatically extract your python docstrings into markdown documentation"
authors = ["BujarMurati <39311213+BujarMurati@users.noreply.github.com"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
mypy = "^0.782"
interrogate = "^1.3.1"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
