[tool.poetry]
name = "docster"
version = "0.1.0"
description = "Automatically extract your python docstrings into markdown documentation"
authors = ["BujarMurati <39311213+BujarMurati@users.noreply.github.com>"]
packages = [
    { include = "docster" }
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
gitpython = "^3.1.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
mypy = "^0.782"
interrogate = "^1.3.1"
pytest = "^6.0.1"
pre-commit = "^2.7.1"

[tool.poetry.scripts]
docster = "docster.main:app"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
